# disallow-file-endings

./: .pre-commit-hooks.yaml  Cargo.toml  README.md
src/: main.rs
