[package]
name = "disallow_file_extensions"
version = "0.1.0"
edition = "2021"
authors = ["Sondre Lillebø Gundersen <sondrelg@live.no>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", default-features = false, features=["std"] }
